--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "shadow-cljs": "^2.11.15"
   },
   "scripts": {
-    "start": "shadow-cljs watch app"
+    "start": "shadow-cljs watch app",
+    "release:prod": "shadow-cljs release prod"
   }
 }
