--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   },
   "scripts": {
     "start": "shadow-cljs watch app",
-    "release:prod": "shadow-cljs release prod"
+    "release": "shadow-cljs release app"
   }
 }
